--- a/app/new_ui_views/dashboard/orders/show.html.haml
+++ b/app/new_ui_views/dashboard/orders/show.html.haml
@@ -94,4 +94,4 @@
 
         %br/
 
-        %small= t('orders.labels.order_placed_html', date: l(@order.completed_at, :format => :only_date))
+        %small= t('orders.labels.order_placed_html', date: l(@order.completed_at.to_date, format: :long))
