--- a/app/new_ui_views/dashboard/company/payment_documents/_table.html.haml
+++ b/app/new_ui_views/dashboard/company/payment_documents/_table.html.haml
@@ -11,5 +11,5 @@
       %tr
         %td= pd.decorate.attachable_link
         %td= link_to pd.user.try(:name), user_path(pd.user)
-        %td= I18n.l(pd.created_at, format: :day_month_year)
+        %td= I18n.l(pd.created_at.to_date, format: :short)
         %td.file= link_to pd.file.file_name, pd.file.url, target: '_blank', download: pd.file.file_name
