--- a/app/views/dashboard/company/payment_documents/_table.html.haml
+++ b/app/views/dashboard/company/payment_documents/_table.html.haml
@@ -10,7 +10,7 @@
     %tr
       %td= pd.decorate.attachable_link
       %td= link_to pd.user.try(:name), user_path(pd.user)
-      %td= I18n.l(pd.created_at, format: :day_month_year)
+      %td= I18n.l(pd.created_at.to_date, format: :short)
       %td.file= link_to pd.file.file_name, pd.file.url, target: '_blank'
 
 = will_paginate_styled collection
