--- a/app/views/dashboard/reviews/_order_info_created.html.haml
+++ b/app/views/dashboard/reviews/_order_info_created.html.haml
@@ -1,3 +1,3 @@
 .order-info
   %p= t('dashboard.reviews.feedback.order_placed').upcase
-  %p= I18n.l(created_at, format: :only_date)
+  %p= I18n.l(created_at.to_date, format: :long)
