--- a/app/views/recurring_booking_mailer/notify_guest_of_confirmation.text.liquid
+++ b/app/views/recurring_booking_mailer/notify_guest_of_confirmation.text.liquid
@@ -7,7 +7,7 @@ Your booking for '{{ listing.name }}' has been confirmed! Here it is:
 What: {{ listing.name }} x {{ recurring_booking.quantity }}
 
 Starting at:
-{{ recurring_booking.start_date }}
+{{ recurring_booking.start_date | to_date | localize: 'day_and_month' }}
 
 Total: {{ recurring_booking.subtotal_price_for_guest }}
 
