--- a/app/views/recurring_booking_mailer/notify_host_with_confirmation.html.liquid
+++ b/app/views/recurring_booking_mailer/notify_host_with_confirmation.html.liquid
@@ -21,7 +21,7 @@ Your listing, '<a href="{{ platform_context.host | append:listing.listing_url }}
       <tr>
         <td valign="top"><strong style='display: inline-block;'>Starting at</strong></td>
         <td style="text-align: right;">
-          {{ recurring_booking.start_date }}
+          {{ recurring_booking.start_date | to_date | localize: 'day_and_month' }}
         </td>
       </tr>
     </table>
