--- a/app/views/registrations/blog/_blog_post.html.liquid
+++ b/app/views/registrations/blog/_blog_post.html.liquid
@@ -7,7 +7,7 @@
         </h2>
       </div>
       <div class="span2 date">
-        {{ blog_post.published_at | localize: 'day_and_month' }}
+        {{ blog_post.published_at | to_date | localize: 'day_and_month' }}
       </div>
     </div>
     <div class="row-fluid">
