NM-3678 exclusive booking and booking out toggles didn't work

--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_book_it_out.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_book_it_out.html.haml
@@ -1,6 +1,7 @@
 %hr/
 .form-inline
-  = f.input :enable_book_it_out_discount, as: :switch, label_html: { class: 'block-label' }, required: false, label: t(:enable, scope: [:pricing, :schedule, :book_it_out])
+  = f.input :enable_book_it_out_discount, as: :switch, label_html: { class: 'block-label' }, required: false,
+  label: t(:enable, scope: [:pricing, :schedule, :book_it_out]), input_html: { checked: f.object.book_it_out_discount.present? }
 
   = f.input :book_it_out_discount, as: :numeric, label_html: { class: 'block-label' }, required: false, label: t(:percent_discount, scope: [:pricing, :schedule, :book_it_out])
 
