--- a/app/new_ui_views/dashboard/company/transactables/form_fields/_exclusive_price.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/form_fields/_exclusive_price.html.haml
@@ -1,6 +1,7 @@
 %hr/
 
 .form-inline
-  = f.input :enable_exclusive_price, as: :switch, label_html: { class: 'block-label' }, required: false, label: t(:enable, scope: [:pricing, :schedule, :exclusive_price])
+  = f.input :enable_exclusive_price, as: :switch, label_html: { class: 'block-label' }, required: false,
+  label: t(:enable, scope: [:pricing, :schedule, :exclusive_price]), input_html: { checked: f.object.exclusive_price.present? }
 
   = f.input :exclusive_price, as: :numeric, wrapper: :dashboard_addon, prefix: currency_symbol_from_code(@transactable.try(:currency)), label_html: { class: 'block-label' }, required: false, label: t(:exclusive_price, scope: [:pricing, :schedule, :exclusive_price])
