--- a/app/assets/stylesheets/instance_wizard/_flash.scss
+++ b/app/assets/stylesheets/instance_wizard/_flash.scss
@@ -19,6 +19,7 @@
 
   &.static {
     position: static;
+    float: left;
   }
 
   p {
@@ -27,29 +28,6 @@
     color: white;
     font-size: 24px;
     line-height: 60px;
-
-    span.left-icon {
-      margin-right: 15px;
-    }
-
-    span.right-icon {
-      margin-left: 5px;
-    }
-  }
-
-  a.close {
-    position: absolute;
-    top:  0;
-    right: 20px;
-    color: white;
-    font-size: 24px;
-    line-height: 60px;
-    @include opacity(.6);
-
-    &:hover {
-      color: white;
-      @include opacity(.8);
-    }
   }
 
   &.success, &.notice {
@@ -71,14 +49,5 @@
   &.timeout {
     display: none !important;
     z-index: 0;
-  }
-}
-
-.modal-content{
-
-  .alert{
-    position: relative;
-    top: auto;
-    left: auto;
   }
 }
