--- a/app/views/instance_wizard/_form.html.haml
+++ b/app/views/instance_wizard/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for instance, :url => '/create', :html => { :multipart => true } do |f|
+= simple_form_for instance, :url => '/create', :html => { :multipart => true, data: { :"instance-wizard-form" => true } } do |f|
   = hidden_field_tag "instance_creator[email]", @instance_creator.email
 
   - if user.new_record?
@@ -17,8 +17,8 @@
 
   %legend Domain
   - instance.domains.build unless instance.domains.any?
-  = f.fields_for :domains do |f_d|
-    = f_d.input :name, placeholder: 'my-market.near-me.com', input_html: { class: 'form-control' }
+  = f.fields_for :domains do |f|
+    = f.input :name, placeholder: 'my-market.near-me.com', input_html: { class: 'form-control', :"data-domain-name" => true }
   %br
   %br
 
