NM-3698 liquid views per locales
* remove Homepage option from Theme in MP Admin
* remove Homepage content option from Theme in MP Admin
* remove Footer option from Theme in MP Admin
* remove Header tab from Theme
* make it possible to edit homepage, homepage content, footer, header,
  search input, latest products via liquid view
* new users will be assigned current I18n.locale instead of
  marketplace's default
* change LiquidView association with TransactableType to many_to_many
* if liquid view is associated with TransactableType but it does not
  make sense then just ignore this association instead of not finding
  view
* the above allowed to remove custom validation in various places to
  prevent situations described above
* associate InstanceView with locales stored in DB via has_many
* fallbacks will now be done to marketplace's default language instead
  of hardcoded english
* respect I18n.locale when rendering email/sms templates
* improve including files in liquid - use the rails way instead of
  custom, ugly solution. As a benefit, we will leverage caching
  mechanism, view paths etc - this will remove duplication.

--- a/app/views/instance_admin/manage/email_layout_templates/_form.html.haml
+++ b/app/views/instance_admin/manage/email_layout_templates/_form.html.haml
@@ -6,7 +6,10 @@
         = f.input :path, label: t('instance_admin.manage.email_layouts.template_path'), :placeholder => 'layouts/path', disabled: @email_layout_template.persisted? && WorkflowAlert.for_email_layout_path(@email_layout_template.path).count > 0, input_html: { class: 'form-control' }, hint: t('instance_admin.manage.email_layouts.path_must_start_with_layouts')
     .row
       .input-container.col-xs-12
-        = f.association :transactable_type, label: t('instance_admin.manage.email_layouts.service_type')
+        = f.association :transactable_types, hint: 'Please note that for some templates this option is not relevant. For example, it does not make sense to create different templates for sign up workflow because user does not sign up to TransactableType. As a rule of thumb, Transactable Type is relevant if workflow concerns listing.'
+    .row
+      .input-container.col-xs-12
+        = f.association :locales
     .row
       .input-container.col-xs-12
         = f.input :format, collection: ['text', 'html'], input_html: { class: 'form-control' }
@@ -17,4 +20,4 @@
     = content_for :header_buttons do
       = f.button :submit, t('instance_admin.save'), class: 'btn btn-blue pull-right', data: { 'submit-form' => 1, 'form-selector' => 'form' }
       = link_to t('instance_admin.cancel'), instance_admin_manage_email_layout_templates_url , class: 'btn btn-light pull-right'
- 
+
