--- a/app/views/instance_admin/manage/wish_lists/show.html.haml
+++ b/app/views/instance_admin/manage/wish_lists/show.html.haml
@@ -20,18 +20,18 @@
 
     .row
       .input-container.col-xs-12
-        - name = Translation.defaults_for(:en).create_with(value: t('wish_lists.name'), locale: 'en').find_or_create_by(key: 'wish_lists.name')
+        - name = Translation.defaults_for(:en).create_with(value: t('wish_lists.name'), locale: :en).find_or_create_by(key: 'wish_lists.name')
         = render 'translation_row', translation: name, index: 0, title: t('instance_admin.wish_lists.labels.name')
 
     .row
       .input-container.col-xs-12
-        - unselected = Translation.defaults_for(:en).create_with(value: t('wish_lists.buttons.unselected_state'), locale: 'en').find_or_create_by(key: 'wish_lists.buttons.unselected_state')
+        - unselected = Translation.defaults_for(:en).create_with(value: t('wish_lists.buttons.unselected_state'), locale: :en).find_or_create_by(key: 'wish_lists.buttons.unselected_state')
         = render 'translation_row', translation: unselected, index: 1,
             title: t('instance_admin.wish_lists.labels.unselected_state')
 
     .row
       .input-container.col-xs-12
-        - selected = Translation.defaults_for(:en).create_with(value: t('wish_lists.buttons.selected_state'), locale: 'en').find_or_create_by(key: 'wish_lists.buttons.selected_state')
+        - selected = Translation.defaults_for(:en).create_with(value: t('wish_lists.buttons.selected_state'), locale: :en).find_or_create_by(key: 'wish_lists.buttons.selected_state')
         = render 'translation_row', translation: selected, index: 2,
             title: t('instance_admin.wish_lists.labels.selected_state')
 
