--- a/app/views/instance_admin/settings/locales/index.html.haml
+++ b/app/views/instance_admin/settings/locales/index.html.haml
@@ -28,7 +28,7 @@
               %td
                 = link_to t('instance_admin.locales.buttons.date_time'), date_time_preferences_instance_admin_settings_locale_path(locale), class: 'btn btn-blue btn-small'
               %td
-                - unless locale.code == 'en'
+                - unless locale.primary?
                   = link_to instance_admin_settings_locale_path(locale), method: :delete,
                       data: { confirm: t('instance_admin.locales.confirmations.delete') } do
                     .fa.fa-trash-o.fa-2x.inline-form-icon.pull-right
