--- a/app/views/instance_admin/theme/liquid_views/_form.html.haml
+++ b/app/views/instance_admin/theme/liquid_views/_form.html.haml
@@ -9,7 +9,10 @@
         = f.input :path, disabled: @liquid_view.persisted?, input_html: { class: 'form-control' }
     .row
       .input-container.col-xs-12
-        = f.association :transactable_type
+        = f.association :transactable_types, hint: 'Please note that for most liquid views this option is not relevant. For example, it does not make sense to create homepage for different Transactable Type because it does not depend on it. As a rule of thumb, Transactable Type is relevant if url includes transactable_type_id parameter or liquid view displays listing information.'
+    .row
+      .input-container.col-xs-12
+        = f.association :locales
     .row
       .input-container.col-xs-12
         - if @base_view.present?
