--- a/app/community_views/shared/_head.html.haml
+++ b/app/community_views/shared/_head.html.haml
@@ -1,4 +1,5 @@
 %head
+  = render 'layouts/content_holder_injector'
   %meta{:charset => "utf-8"}/
   %title= title_tag
   %meta{:content => meta_description_content, :name => "description"}/
@@ -16,3 +17,4 @@
   %link{:href => "#{platform_context.favicon_image.url}", :rel => "shortcut icon"}/
 
   = csrf_meta_tags
+  = inject_content_holder('HEAD')
