--- a/app/views/layouts/_theme_footer.html.liquid
+++ b/app/views/layouts/_theme_footer.html.liquid
@@ -1,5 +1,12 @@
 <footer>
   <div class="row-fluid">
+    {% if platform_context.is_footer_languages_select? %}
+      <div class="footer-languages-select">
+        {% languages_select %}
+      </div>
+    {% endif %}
+  </div>
+  <div class="row-fluid">
     <div class="mobile-row mobile-clearfix">
       <div class="span3 mobile6 col-md-3 col-xs-6">
         <ul class="pages">
