--- a/app/community_views/instance_admin/layout/_nav.html.haml
+++ b/app/community_views/instance_admin/layout/_nav.html.haml
@@ -51,7 +51,7 @@
           %span Theme
         %ul#theme-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::Theme")}
           - InstanceAdmin::BaseController::THEME_CONTROLLERS.each do |controller_name, settings|
-            - next if ['info', 'liquid views', 'homepage', 'homepage content', 'header', 'footer', 'content_holders'].include?(controller_name)
+            - next if ['info', 'liquid views', 'homepage', 'homepage content', 'header', 'footer'].include?(controller_name)
             %li
               %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/theme/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
                 %span= "#{controller_name.titleize}"
