--- a/app/views/instance_admin/support/faqs/_faq.html.haml
+++ b/app/views/instance_admin/support/faqs/_faq.html.haml
@@ -2,8 +2,9 @@
   %td= faq.question
   %td
     .pull-right
-      = link_to edit_instance_admin_manage_support_faq_path(faq) do
+      = link_to [:edit, :instance_admin, faq] do
         .fa.fa-pencil.fa-2x.inline-form-icon
-      = link_to instance_admin_manage_support_faq_path(faq), :method => :delete,
+        
+      = link_to [:instance_admin, faq], method: :delete,
           data: { confirm: t('confirmations.are_you_sure_you_want_to_delete_this_item') } do
         .fa.fa-trash-o.fa-2x.inline-form-icon
