--- a/app/views/instance_admin/support/faqs/_form.html.haml
+++ b/app/views/instance_admin/support/faqs/_form.html.haml
@@ -1,6 +1,6 @@
 .support
   .content-container
-    =simple_form_for [:instance_admin, :manage, @faq] do |f|
+    =simple_form_for [:instance_admin, @faq] do |f|
       .row
         .input-container.col-xs-12
           =f.input :question, required: false, placeholder: 'What is the title of the question?', :input_html => { class: 'form-control', :rows => 2 }
@@ -10,4 +10,3 @@
 
       = content_for :header_buttons do
         =f.submit 'Save', class: 'btn btn-blue pull-right', data: { 'submit-form' => 1, 'form-selector' => 'form' }
-
