NM-3673 Added translations like generic_lessee_term to be used for lists containing multiple types of services

--- a/app/new_ui_views/dashboard/company/host_recurring_bookings/index.html.haml
+++ b/app/new_ui_views/dashboard/company/host_recurring_bookings/index.html.haml
@@ -1,4 +1,5 @@
-- title "#{platform_context.lessee.capitalize.pluralize} (#{@guest_list.recurring_bookings.size})"
+-# We are using generic_lessee_term here because the list may include reservations for multiple types of services
+- title "#{t('general.generic_lessee_term').capitalize.pluralize} (#{@guest_list.recurring_bookings.size})"
 
 - content_for :page_header do
   %h1= yield :title
