NM-2087 - featured items

--- a/app/frontend/stylesheets/components/_components.scss
+++ b/app/frontend/stylesheets/components/_components.scss
@@ -8,6 +8,7 @@
 @import "custom_checkboxes_and_radios";
 @import "datepicker";
 @import "fileupload";
+@import "featured_items";
 @import "flash";
 @import "google-map";
 @import "header";
